--- a/talkbackDog-master/app/src/main/res/layout/activity_main.xml
+++ b/talkbackDog-master/app/src/main/res/layout/activity_main.xml
@@ -8,30 +8,29 @@
     android:orientation="vertical">
 
     <TextView
-        android:visibility="gone"
         android:id="@+id/ip_ssds"
-        android:textColor="#ffffff"
-        android:background="#66000000"
         android:layout_width="match_parent"
         android:layout_height="30dp"
+        android:background="#66000000"
         android:gravity="center"
-        android:text="11" />
+        android:text="11"
+        android:textColor="#ffffff"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/ip_change"
-        android:textColor="#ffffff"
-        android:background="#66000000"
         android:layout_width="match_parent"
         android:layout_height="30dp"
+        android:background="#66000000"
         android:gravity="center"
-        android:text="对方IP: 192.168.0.101" />
+        android:text="对方IP: 192.168.0.101"
+        android:textColor="#ffffff" />
 
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="2.8">
-
 
 
         <ListView
@@ -43,98 +42,185 @@
         </ListView>
 
 
-
     </RelativeLayout>
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/lv"
         android:layout_centerInParent="true"
         android:layout_weight="1"
-        android:background="#55000000"
-        android:orientation="vertical"
-        android:paddingTop="5dp">
+        android:background="#55000000">
 
 
-        <RelativeLayout
-            android:id="@+id/start_record_button"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_gravity="center"
-            android:background="@drawable/press_speaker">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingTop="5dp">
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center">
+
+
+                <LinearLayout
+                    android:visibility="invisible"
+                    android:id="@+id/show1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerInParent="true"
+                    android:layout_marginLeft="50dp"
+                    android:orientation="vertical">
+
+                    <View
+
+                        android:layout_width="50dp"
+                        android:layout_height="2dp"
+                        android:layout_gravity="center"
+                        android:background="#9900ff00" />
+
+                    <View
+                        android:layout_width="60dp"
+                        android:layout_height="2dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:background="#9900ff00" />
+
+                    <View
+                        android:layout_width="50dp"
+                        android:layout_height="2dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:background="#9900ff00" />
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:visibility="invisible"
+                    android:id="@+id/show2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerInParent="true"
+                    android:layout_marginRight="50dp"
+                    android:orientation="vertical">
+
+                    <View
+
+                        android:layout_width="50dp"
+                        android:layout_height="2dp"
+                        android:layout_gravity="center"
+                        android:background="#9900ff00" />
+
+                    <View
+                        android:layout_width="60dp"
+                        android:layout_height="2dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:background="#9900ff00" />
+
+                    <View
+                        android:layout_width="50dp"
+                        android:layout_height="2dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:background="#9900ff00" />
+
+                </LinearLayout>
+
+
+
+
+                <RelativeLayout
+                    android:layout_centerInParent="true"
+                    android:id="@+id/start_record_button"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/press_speaker">
+
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/img"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_centerInParent="true"
+                            android:layout_gravity="center"
+                            android:src="@mipmap/speacker" />
+
+
+                        <TextView
+
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="5dp"
+                            android:text="按住说话"
+                            android:textColor="#ffff"
+                            android:textSize="13sp" />
+                    </LinearLayout>
+                </RelativeLayout>
+            </RelativeLayout>
 
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/img"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_centerInParent="true"
-                    android:layout_gravity="center"
-                    android:src="@mipmap/speacker" />
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:gravity="center"
+                android:orientation="horizontal">
 
 
                 <TextView
-
-                    android:layout_width="wrap_content"
+                    android:id="@+id/ting"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:text="按住说话"
-                    android:textColor="#ffff"
-                    android:textSize="13sp" />
+                    android:background="@drawable/send_speaker"
+                    android:gravity="center"
+                    android:paddingBottom="10dp"
+                    android:paddingLeft="55dp"
+                    android:paddingRight="55dp"
+                    android:paddingTop="10dp"
+                    android:text="试听"
+                    android:textColor="#ffffff" />
+
+                <TextView
+                    android:id="@+id/send"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/send_speaker"
+                    android:paddingBottom="10dp"
+                    android:paddingLeft="55dp"
+                    android:paddingRight="55dp"
+                    android:paddingTop="10dp"
+                    android:text="发送"
+                    android:textColor="#ffffff" />
+
             </LinearLayout>
-        </RelativeLayout>
-
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-
-            <TextView
-                android:id="@+id/ting"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="@drawable/send_speaker"
-                android:gravity="center"
-                android:paddingBottom="10dp"
-                android:paddingLeft="55dp"
-                android:paddingRight="55dp"
-                android:paddingTop="10dp"
-                android:text="试听"
-                android:textColor="#ffffff" />
-
-            <TextView
-                android:id="@+id/send"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:background="@drawable/send_speaker"
-                android:paddingBottom="10dp"
-                android:paddingLeft="55dp"
-                android:paddingRight="55dp"
-                android:paddingTop="10dp"
-                android:text="发送"
-                android:textColor="#ffffff" />
 
         </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
+
 
     <Button
         android:id="@+id/stop_record_button"
