--- a/talkbackDog-master/app/src/main/res/layout/item_right.xml
+++ b/talkbackDog-master/app/src/main/res/layout/item_right.xml
@@ -4,12 +4,24 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:textSize="13sp"
+        android:textColor="#000000"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:id="@+id/time"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"
+        android:text="11月11日 22:30:23"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <LinearLayout
+        android:layout_below="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="2dp"
         android:orientation="horizontal"
         android:padding="5dp">
 
@@ -21,20 +33,48 @@
 
 
             <ImageView
+                android:id="@+id/llls"
                 android:layout_width="150dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
-
                 android:scaleType="fitXY"
                 android:src="@drawable/aae" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+
+            <LinearLayout
+                android:gravity="center"
+                android:paddingLeft="10dp"
                 android:layout_centerInParent="true"
-                android:paddingRight="10dp"
-                android:text="语音消息"
-                android:textColor="#ffffff" />
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:textSize="11sp"
+                    android:id="@+id/tie_vice"
+                   android:paddingRight="5dp"
+                    android:gravity="center"
+                    android:textColor="#ffffff"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="10s" />
+
+                <TextView
+                    android:textSize="11sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:paddingRight="10dp"
+                    android:text="语音消息"
+                    android:textColor="#ffffff" />
+
+
+
+            </LinearLayout>
+
+
+
+
         </RelativeLayout>
 
         <ImageView
